name:                implicit
version:             0.1.0.0
synopsis:            architecture for direct evaluation of functional code
description:         Please see README.md
homepage:            http://github.com/benjijones/implicit
license:             BSD3
license-file:        LICENSE
author:              Benji Jones
maintainer:          benji.s.jones@gmail.com
copyright:           2015 Benji Jones
category:            Architecture
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src, src/Implicit
  exposed-modules:     Lava, Implicit.Atom, Implicit.BitWidths, Implicit.Context, Implicit.EvaluationMemory Implicit.Expr, Implicit.ExprToAtom, Implicit.LookupTable, Implicit.Sentence, Implicit.Adder, Implicit.AtomType

  build-depends:       base, process, containers, singletons
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, process, containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/benjijones/implicit
